--- a/README.adoc
+++ b/README.adoc
@@ -316,7 +316,7 @@ Following table defines how HTTP request supposed to be constructed.
 |/v1/messages
 |http://localhost:7070/v1/messages
 `body`: `{"message_id": "abc", "sub": {"subfield": "sub"}}`
-|`message_id` is mapped as path variable while `sub` is mapped as body payload
+|entire message is mapped as body payload
 
 |===
 
@@ -348,7 +348,29 @@ server.stop()
 
 === Set up your project
 
-TBD
+To generate Scala classes for gateway handler and Swagger documentation add following in `plugin.sbt`:
+
+[source, sbt]
+----
+addSbtPlugin("com.thesamet" % "sbt-protoc" % "1.0.7")
+addSbtPlugin("io.github.sfali23" % "grpc-rest-gateway-code-gen" % "0.3.0")
+
+libraryDependencies += "com.thesamet.scalapb" %% "compilerplugin" % "0.11.15"
+resolvers += "Sonatype OSS" at "https://s01.oss.sonatype.org/content/groups/public/"
+----
+
+And following in the `build.sbt`:
+
+[source, sbt]
+----
+Compile / PB.targets := Seq(
+  scalapb.gen() -> (Compile / sourceManaged).value / "scalapb",
+  com.improving.grpc_rest_gateway.gatewayGen -> -> (Compile / sourceManaged).value / "scalapb",
+  com.improving.grpc_rest_gateway.swaggerGen -> -> (Compile / resourceManaged).value / "scalapb"
+)
+
+libraryDependencies += "io.github.sfali23" %% "grpc-rest-gateway-runtime" % "0.3.0"
+----
 
 === Run tests and sample app
 
